--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
+	<meta name="description" content="Professional dental care services - DentalCom provides comprehensive dental treatments, cosmetic dentistry, and oral health solutions for the whole family.">
 
 	<!-- title -->
 	<title>DentalCom</title>
@@ -52,11 +52,11 @@
 				<div class="col-lg-9 offset-lg-2 text-center">
 					<div class="hero-text">
 						<div class="hero-text-tablecell">
-							<p class="subtitle">Fresh & Organic</p>
-							<h1>Delicious Seasonal Fruits</h1>
+							<p class="subtitle">Professional & Caring</p>
+							<h1>Your Smile is Our Priority</h1>
 							<div class="hero-btns">
-								<a href="shop.html" class="boxed-btn">Fruit Collection</a>
-								<a href="contact.html" class="bordered-btn">Contact Us</a>
+								<a href="{% url 'frontend:shop' %}" class="boxed-btn">Our Services</a>
+								<a href="{% url 'frontend:contact' %}" class="bordered-btn">Book Appointment</a>
 							</div>
 						</div>
 					</div>
