--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -56,7 +56,7 @@
 							<h1>Your Smile is Our Priority</h1>
 							<div class="hero-btns">
 								<a href="{% url 'frontend:shop' %}" class="boxed-btn">Our Services</a>
-								<a href="{% url 'frontend:contact' %}" class="bordered-btn">Book Appointment</a>
+								<a href="{% url 'frontend:appointment' %}" class="bordered-btn">Book Appointment</a>
 							</div>
 						</div>
 					</div>
