Added services section and about hero img

--- a/Frontend/about.html
+++ b/Frontend/about.html
@@ -46,12 +46,12 @@
 	{% include 'Includes/navbar.html' %}
 	
 	<!-- breadcrumb-section -->
-	<div class="breadcrumb-section breadcrumb-bg">
+	<div class="breadcrumb-section breadcrumb-bg" style="background-image: url('{% static 'img/about-us.png' %}');">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
-						<p>We sale fresh fruits</p>
+						<p>Professional Dental Care Services</p>
 						<h1>About Us</h1>
 					</div>
 				</div>
@@ -68,67 +68,120 @@
 					<div class="featured-text">
 						<h2 class="pb-3">Why <span class="orange-text">DentalCom</span></h2>
 						<div class="row">
+							<!-- Dental Scaling -->
 							<div class="col-lg-6 col-md-6 mb-4 mb-md-5">
 								<div class="list-box d-flex">
 									<div class="list-icon">
-										<i class="fas fa-shipping-fast"></i>
+										<i class="fas fa-tooth"></i>
 									</div>
 									<div class="content">
-										<h3>Home Delivery</h3>
-										<p>sit voluptatem accusantium dolore mque laudantium, totam rem aperiam, eaque ipsa quae ab illo.</p>
+										<h3>Dental Scaling</h3>
+										<p>Remove plaque, tartar, and stains with gentle, professional scaling. Keep your gums healthy and smile fresh with our expert hygiene care.</p>
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-6 col-md-6 mb-5 mb-md-5">
+							<!-- Braces & Invisalign -->
+							<div class="col-lg-6 col-md-6 mb-4 mb-md-5">
 								<div class="list-box d-flex">
 									<div class="list-icon">
-										<i class="fas fa-money-bill-alt"></i>
+										<i class="fas fa-teeth"></i>
 									</div>
 									<div class="content">
-										<h3>Best Price</h3>
-										<p>sit voluptatem accusantium dolore mque laudantium, totam rem aperiam, eaque ipsa quae ab illo.</p>
+										<h3>Braces & Invisalign</h3>
+										<p>Straighten your teeth with traditional braces or clear aligners. Our orthodontic solutions are comfortable, discreet, and tailored to your smile.</p>
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-6 col-md-6 mb-5 mb-md-5">
+							<!-- Cosmetic Dentistry -->
+							<div class="col-lg-6 col-md-6 mb-4 mb-md-5">
 								<div class="list-box d-flex">
 									<div class="list-icon">
-										<i class="fas fa-briefcase"></i>
+										<i class="fas fa-smile"></i>
 									</div>
 									<div class="content">
-										<h3>Custom Box</h3>
-										<p>sit voluptatem accusantium dolore mque laudantium, totam rem aperiam, eaque ipsa quae ab illo.</p>
+										<h3>Cosmetic Dentistry</h3>
+										<p>Enhance your smile with teeth whitening, veneers, and bonding. We focus on aesthetics without compromising function or comfort.</p>
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-6 col-md-6">
+							<!-- Dental Implants -->
+							<div class="col-lg-6 col-md-6 mb-4 mb-md-5">
 								<div class="list-box d-flex">
 									<div class="list-icon">
-										<i class="fas fa-sync-alt"></i>
+										<i class="fas fa-syringe"></i>
 									</div>
 									<div class="content">
-										<h3>Quick Refund</h3>
-										<p>sit voluptatem accusantium dolore mque laudantium, totam rem aperiam, eaque ipsa quae ab illo.</p>
+										<h3>Dental Implants</h3>
+										<p>Missing a tooth? Dental implants offer a permanent, natural-looking solution for restoring your smile and improving chewing ability.</p>
+									</div>
+								</div>
+							</div>
+							<!-- Root Canal Treatment -->
+							<div class="col-lg-6 col-md-6 mb-4 mb-md-5">
+								<div class="list-box d-flex">
+									<div class="list-icon">
+										<i class="fas fa-x-ray"></i>
+									</div>
+									<div class="content">
+										<h3>Root Canal Therapy</h3>
+										<p>Save infected or damaged teeth with painless root canal treatments performed by skilled specialists using advanced technology.</p>
+									</div>
+								</div>
+							</div>
+							<!-- Pediatric Dentistry -->
+							<div class="col-lg-6 col-md-6 mb-4 mb-md-5">
+								<div class="list-box d-flex">
+									<div class="list-icon">
+										<i class="fas fa-child"></i>
+									</div>
+									<div class="content">
+										<h3>Kids' Dental Care</h3>
+										<p>Gentle dental care for children, including cleanings, fluoride treatments, and cavity prevention in a kid-friendly, welcoming environment.</p>
+									</div>
+								</div>
+							</div>
+							<!-- Emergency Dental Care -->
+							<div class="col-lg-6 col-md-6 mb-4 mb-md-0">
+								<div class="list-box d-flex">
+									<div class="list-icon">
+										<i class="fas fa-ambulance"></i>
+									</div>
+									<div class="content">
+										<h3>Emergency Care</h3>
+										<p>Toothache or broken tooth? We offer fast, effective emergency dental services to relieve pain and restore your smile quickly.</p>
+									</div>
+								</div>
+							</div>
+							<!-- Patient-Centered Care -->
+							<div class="col-lg-6 col-md-6 mb-4 mb-md-0">
+								<div class="list-box d-flex">
+									<div class="list-icon">
+										<i class="fas fa-user-md"></i>
+									</div>
+									<div class="content">
+										<h3>Compassionate Experts</h3>
+										<p>Our skilled team provides personalized care with a gentle touch. We focus on your comfort, safety, and long-term oral health goals.</p>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
+				
 			</div>
 		</div>
 	</div>
 	<!-- end featured section -->
 
-	<!-- shop banner -->
+	<!-- services banner -->
 	<section class="shop-banner">
     	<div class="container">
-        	<h3>December sale is on! <br> with big <span class="orange-text">Discount...</span></h3>
-            <div class="sale-percent"><span>Sale! <br> Upto</span>50% <span>off</span></div>
-            <a href="shop.html" class="cart-btn btn-lg">Shop Now</a>
+        	<h3>New Patient Special! <br> Get <span class="orange-text">Comprehensive Checkup...</span></h3>
+            <div class="sale-percent"><span>Special! <br> Up to</span>30% <span>off</span></div>
+            <a href="{% url 'frontend:appointment' %}" class="cart-btn btn-lg">Book Appointment</a>
         </div>
     </section>
-	<!-- end shop banner -->
+	<!-- end services banner -->
 
 	<!-- team section -->
 	<div class="mt-150">
@@ -136,8 +189,8 @@
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="section-title">
-						<h3>Our <span class="orange-text">Team</span></h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, fuga quas itaque eveniet beatae optio.</p>
+						<h3>Our <span class="orange-text">Dental Team</span></h3>
+						<p>Meet our experienced and compassionate dental professionals who are dedicated to providing you with the highest quality dental care and personalized treatment.</p>
 					</div>
 				</div>
 			</div>
@@ -145,7 +198,7 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="single-team-item">
 						<div class="team-bg team-bg-1"></div>
-						<h4>Jimmy Doe <span>Farmer</span></h4>
+						<h4>Dr. Sarah Johnson <span>General Dentist</span></h4>
 						<ul class="social-link-team">
 							<li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
@@ -156,7 +209,7 @@
 				<div class="col-lg-4 col-md-6">
 					<div class="single-team-item">
 						<div class="team-bg team-bg-2"></div>
-						<h4>Marry Doe <span>Farmer</span></h4>
+						<h4>Dr. Michael Chen <span>Orthodontist</span></h4>
 						<ul class="social-link-team">
 							<li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
@@ -167,7 +220,7 @@
 				<div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0">
 					<div class="single-team-item">
 						<div class="team-bg team-bg-3"></div>
-						<h4>Simon Joe <span>Farmer</span></h4>
+						<h4>Dr. Emily Rodriguez <span>Oral Surgeon</span></h4>
 						<ul class="social-link-team">
 							<li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
@@ -191,9 +244,9 @@
 								<img src="{% static 'img/avaters/avatar1.png' %}" alt="">
 							</div>
 							<div class="client-meta">
-								<h3>Saira Hakim <span>Local shop owner</span></h3>
+								<h3>Sarah Williams <span>Patient</span></h3>
 								<p class="testimonial-body">
-									" Sed ut perspiciatis unde omnis iste natus error veritatis et  quasi architecto beatae vitae dict eaque ipsa quae ab illo inventore Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium "
+									"Dr. Johnson and her team made my dental experience comfortable and stress-free. The modern equipment and gentle approach helped me overcome my dental anxiety. I highly recommend DentalCom for anyone looking for quality dental care."
 								</p>
 								<div class="last-icon">
 									<i class="fas fa-quote-right"></i>
@@ -205,9 +258,9 @@
 								<img src="{% static 'img/avaters/avatar2.png' %}" alt="">
 							</div>
 							<div class="client-meta">
-								<h3>David Niph <span>Local shop owner</span></h3>
+								<h3>Michael Thompson <span>Patient</span></h3>
 								<p class="testimonial-body">
-									" Sed ut perspiciatis unde omnis iste natus error veritatis et  quasi architecto beatae vitae dict eaque ipsa quae ab illo inventore Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium "
+									"The orthodontic treatment I received here was exceptional. Dr. Chen explained everything clearly and the results exceeded my expectations. The staff is professional and the facility is clean and modern."
 								</p>
 								<div class="last-icon">
 									<i class="fas fa-quote-right"></i>
@@ -219,9 +272,9 @@
 								<img src="{% static 'img/avaters/avatar3.png' %}" alt="">
 							</div>
 							<div class="client-meta">
-								<h3>Jacob Sikim <span>Local shop owner</span></h3>
+								<h3>Lisa Martinez <span>Patient</span></h3>
 								<p class="testimonial-body">
-									" Sed ut perspiciatis unde omnis iste natus error veritatis et  quasi architecto beatae vitae dict eaque ipsa quae ab illo inventore Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium "
+									"I had a complex oral surgery procedure and Dr. Rodriguez made me feel completely at ease. The recovery was smooth and the follow-up care was outstanding. I'm grateful for the excellent treatment I received."
 								</p>
 								<div class="last-icon">
 									<i class="fas fa-quote-right"></i>
