added postman collection and readme file, added blog api module

--- a/Frontend/news.html
+++ b/Frontend/news.html
@@ -46,12 +46,12 @@
 	{% include 'Includes/navbar.html' %}
 	
 	<!-- breadcrumb-section -->
-	<div class="breadcrumb-section breadcrumb-bg">
+	<div class="breadcrumb-section breadcrumb-bg"  style="background-image: url('{% static 'img/news.png' %}');">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
-						<p>Organic Information</p>
+						<p>Dental Information</p>
 						<h1>News Article</h1>
 					</div>
 				</div>
