--- a/Frontend/cart.html
+++ b/Frontend/cart.html
@@ -31,6 +31,8 @@
 	<link rel="stylesheet" href="{% static 'css/main.css' %}">
 	<!-- responsive -->
 	<link rel="stylesheet" href="{% static 'css/responsive.css' %}">
+	
+
 
 </head>
 <body>
@@ -46,12 +48,12 @@
 	{% include 'Includes/navbar.html' %}
 	
 	<!-- breadcrumb-section -->
-	<div class="breadcrumb-section breadcrumb-bg">
+	<div class="breadcrumb-section breadcrumb-bg"  style="background-image: url('{% static 'img/cart-hero.png' %}');">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
-						<p>Fresh and Organic</p>
+						<p>Your Shopping Cart</p>
 						<h1>Cart</h1>
 					</div>
 				</div>
