--- a/Frontend/single-news.html
+++ b/Frontend/single-news.html
@@ -46,13 +46,13 @@
 	{% include 'Includes/navbar.html' %}
 	
 	<!-- breadcrumb-section -->
-	<div class="breadcrumb-section breadcrumb-bg">
+	<div class="breadcrumb-section breadcrumb-bg"  style="background-image: url('{% static 'img/news.png' %}');">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
-						<p>Read the Details</p>
-						<h1>Single Article</h1>
+						<p>Dental Information</p>
+						<h1>Article Details</h1>
 					</div>
 				</div>
 			</div>
