updateyd blog tempalte

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -55,7 +55,7 @@
 							<p class="subtitle">Professional & Caring</p>
 							<h1>Your Smile is Our Priority</h1>
 							<div class="hero-btns">
-								<a href="{% url 'frontend:shop' %}" class="boxed-btn">Our Services</a>
+								<a href="{% url 'frontend:services' %}" class="boxed-btn">Our Services</a>
 								<a href="{% url 'frontend:appointment' %}" class="bordered-btn">Book Appointment</a>
 							</div>
 						</div>
