added cehckout shop appointment and contact hero images

--- a/Frontend/404.html
+++ b/Frontend/404.html
@@ -46,7 +46,7 @@
 	{% include 'Includes/navbar.html' %}
 		<!-- end search arewa -->
 		<!-- breadcrumb-section -->
-		<div class="breadcrumb-section breadcrumb-bg">
+		<div class="breadcrumb-section breadcrumb-bg" style="background-image: url('{% static 'img/404-hero.png' %}');">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-8 offset-lg-2 text-center">
