--- a/Frontend/appointment.html
+++ b/Frontend/appointment.html
@@ -303,7 +303,7 @@
 	{% include 'Includes/navbar.html' %}
 	
 	<!-- breadcrumb-section -->
-	<div class="breadcrumb-section breadcrumb-bg">
+	<div class="breadcrumb-section breadcrumb-bg" style="background-image: url('{% static 'img/appointment-hero.png' %}');">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
