--- a/Frontend/contact.html
+++ b/Frontend/contact.html
@@ -45,7 +45,7 @@
 	
 	{% include 'Includes/navbar.html' %}
 	<!-- breadcrumb-section -->
-	<div class="breadcrumb-section breadcrumb-bg">
+	<div class="breadcrumb-section breadcrumb-bg"  style="background-image: url('{% static 'img/contact-hero.png' %}');">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
