added banner image

--- a/Frontend/cart.html
+++ b/Frontend/cart.html
@@ -84,7 +84,7 @@
 									<td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
 									<td class="product-image"><img src="{% static 'img/products/product-img-1.jpg' %}" alt=""></td>
 									<td class="product-name">Strawberry</td>
-									<td class="product-price">$85</td>
+									<td class="product-price">Rs 85</td>
 									<td class="product-quantity"><input type="number" placeholder="0"></td>
 									<td class="product-total">1</td>
 								</tr>
@@ -92,7 +92,7 @@
 									<td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
 									<td class="product-image"><img src="{% static 'img/products/product-img-2.jpg' %}" alt=""></td>
 									<td class="product-name">Berry</td>
-									<td class="product-price">$70</td>
+									<td class="product-price">Rs 70</td>
 									<td class="product-quantity"><input type="number" placeholder="0"></td>
 									<td class="product-total">1</td>
 								</tr>
@@ -100,7 +100,7 @@
 									<td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
 									<td class="product-image"><img src="{% static 'img/products/product-img-3.jpg' %}" alt=""></td>
 									<td class="product-name">Lemon</td>
-									<td class="product-price">$35</td>
+									<td class="product-price">Rs 35</td>
 									<td class="product-quantity"><input type="number" placeholder="0"></td>
 									<td class="product-total">1</td>
 								</tr>
@@ -121,15 +121,15 @@
 							<tbody>
 								<tr class="total-data">
 									<td><strong>Subtotal: </strong></td>
-									<td>$500</td>
+									<td>Rs 500</td>
 								</tr>
 								<tr class="total-data">
 									<td><strong>Shipping: </strong></td>
-									<td>$45</td>
+									<td>Rs 45</td>
 								</tr>
 								<tr class="total-data">
 									<td><strong>Total: </strong></td>
-									<td>$545</td>
+									<td>Rs 545</td>
 								</tr>
 							</tbody>
 						</table>
