--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -77,8 +77,8 @@
 							<i class="fas fa-shipping-fast"></i>
 						</div>
 						<div class="content">
-							<h3>Free Shipping</h3>
-							<p>When order over $75</p>
+						<h3>Free Shipping</h3>
+						<p>When order over Rs 5000</p>
 						</div>
 					</div>
 				</div>
