--- a/Frontend/index_2.html
+++ b/Frontend/index_2.html
@@ -117,8 +117,8 @@
 							<i class="fas fa-shipping-fast"></i>
 						</div>
 						<div class="content">
-							<h3>Free Shipping</h3>
-							<p>When order over $75</p>
+						<h3>Free Shipping</h3>
+						<p>When order over Rs 5000</p>
 						</div>
 					</div>
 				</div>
@@ -169,7 +169,7 @@
 							<a href="single-product.html"><img src="{% static 'img/products/product-img-1.jpg' %}" alt=""></a>
 						</div>
 						<h3>Strawberry</h3>
-						<p class="product-price"><span>Per Kg</span> 85$ </p>
+						<p class="product-price"><span>Per Kg</span> Rs 85</p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
 				</div>
@@ -179,7 +179,7 @@
 								<a href="single-product.html"><img src="{% static 'img/products/product-img-2.jpg' %}" alt=""></a>
 						</div>
 						<h3>Berry</h3>
-						<p class="product-price"><span>Per Kg</span> 70$ </p>
+						<p class="product-price"><span>Per Kg</span> Rs 70</p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
 				</div>
@@ -189,7 +189,7 @@
 							<a href="single-product.html"><img src="{% static 'img/products/product-img-3.jpg' %}" alt=""></a>
 						</div>
 						<h3>Lemon</h3>
-						<p class="product-price"><span>Per Kg</span> 35$ </p>
+						<p class="product-price"><span>Per Kg</span> Rs 35</p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
 				</div>
