--- a/Frontend/single-product.html
+++ b/Frontend/single-product.html
@@ -72,7 +72,7 @@
 				<div class="col-md-7">
 					<div class="single-product-content">
 						<h3>Green apples have polyphenols</h3>
-						<p class="single-product-pricing"><span>Per Kg</span> $50</p>
+						<p class="single-product-pricing"><span>Per Kg</span> Rs 50</p>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta sint dignissimos, rem commodi cum voluptatem quae reprehenderit repudiandae ea tempora incidunt ipsa, quisquam animi perferendis eos eum modi! Tempora, earum.</p>
 						<div class="single-product-form">
 							<form action="index.html">
@@ -113,7 +113,7 @@
 							<a href="single-product.html"><img src="{% static 'img/products/product-img-1.jpg' %}" alt=""></a>
 						</div>
 						<h3>Strawberry</h3>
-						<p class="product-price"><span>Per Kg</span> 85$ </p>
+						<p class="product-price"><span>Per Kg</span> Rs 85</p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
 				</div>
@@ -123,7 +123,7 @@
 							<a href="single-product.html"><img src="{% static 'img/products/product-img-2.jpg' %}" alt=""></a>
 						</div>
 						<h3>Berry</h3>
-						<p class="product-price"><span>Per Kg</span> 70$ </p>
+						<p class="product-price"><span>Per Kg</span> Rs 70</p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
 				</div>
@@ -133,7 +133,7 @@
 							<a href="single-product.html"><img src="{% static 'img/products/product-img-3.jpg' %}" alt=""></a>
 						</div>
 						<h3>Lemon</h3>
-						<p class="product-price"><span>Per Kg</span> 35$ </p>
+						<p class="product-price"><span>Per Kg</span> Rs 35</p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
 				</div>
