--- a/Frontend/about.html
+++ b/Frontend/about.html
@@ -234,7 +234,7 @@
 	<!-- end team section -->
 
 	<!-- testimonail-section -->
-	<div class="testimonail-section mt-80 mb-150">
+	<!-- <div class="testimonail-section mt-80 mb-150">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-10 offset-lg-1 text-center">
@@ -285,7 +285,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<!-- end testimonail-section -->
 
 	<!-- logo carousel -->
