--- a/Frontend/shop.html
+++ b/Frontend/shop.html
@@ -31,6 +31,61 @@
 	<link rel="stylesheet" href="{% static 'css/main.css' %}">
 	<!-- responsive -->
 	<link rel="stylesheet" href="{% static 'css/responsive.css' %}">
+	
+	<style>
+		/* Authentication Modal Styles */
+		#authModal .modal-content {
+			border-radius: 15px;
+			border: none;
+			box-shadow: 0 10px 40px rgba(0,0,0,0.2);
+		}
+		
+		#authModal .modal-header {
+			background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+			color: white;
+			border-radius: 15px 15px 0 0;
+			border: none;
+		}
+		
+		#authModal .modal-header .close {
+			color: white;
+			opacity: 0.8;
+		}
+		
+		#authModal .modal-header .close:hover {
+			opacity: 1;
+		}
+		
+		#authModal .auth-icon i {
+			color: #667eea;
+		}
+		
+		#authModal .btn-primary {
+			background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+			border: none;
+			padding: 15px 30px;
+			font-weight: 600;
+			transition: all 0.3s ease;
+		}
+		
+		#authModal .btn-primary:hover {
+			transform: translateY(-2px);
+			box-shadow: 0 5px 15px rgba(102, 126, 234, 0.4);
+		}
+		
+		#authModal .btn-danger {
+			background: linear-gradient(135deg, #ea4335 0%, #d62516 100%);
+			border: none;
+			padding: 15px 30px;
+			font-weight: 600;
+			transition: all 0.3s ease;
+		}
+		
+		#authModal .btn-danger:hover {
+			transform: translateY(-2px);
+			box-shadow: 0 5px 15px rgba(234, 67, 53, 0.4);
+		}
+	</style>
 
 </head>
 <body>
@@ -127,6 +182,47 @@
 		</div>
 	</div>
 	<!-- end logo carousel -->
+
+	<!-- Authentication Modal -->
+	<div class="modal fade" id="authModal" tabindex="-1" role="dialog" aria-labelledby="authModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="authModalLabel">
+						<i class="fas fa-lock"></i> Authentication Required
+					</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body text-center">
+					<div class="auth-icon mb-3">
+						<i class="fas fa-shopping-cart fa-3x text-primary"></i>
+					</div>
+					<h4>Login Required</h4>
+					<p class="text-muted">You need to login before adding items to cart to save your cart process.</p>
+					
+					<div class="auth-buttons mt-4">
+						<button type="button" class="btn btn-lg btn-primary btn-block mb-3" id="guestLoginBtn">
+							<i class="fas fa-user"></i> Continue as Guest
+						</button>
+						<button type="button" class="btn btn-lg btn-danger btn-block" id="googleLoginBtn">
+							<i class="fab fa-google"></i> Login with Google
+						</button>
+					</div>
+					
+					<div class="mt-3">
+						<small class="text-muted">
+							<i class="fas fa-shield-alt"></i> Your information is secure and protected
+						</small>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Google Sign In Script -->
+	<script src="https://accounts.google.com/gsi/client" async defer></script>
 
 	<!-- footer -->
 	{% include 'Includes/footer.html' %}
