--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -300,34 +300,34 @@
 	</div>
 	<!-- end testimonail-section -->
 	
-	<!-- advertisement section -->
+	<!-- About section -->
 	<div class="abt-section mb-150">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-12">
 					<div class="abt-bg">
-						<a href="https://www.youtube.com/watch?v=DBLlFWYcIGQ" class="video-play-btn popup-youtube"><i class="fas fa-play"></i></a>
+						<img src="{% static 'img/dental-delivery.png' %}" alt="Delivery">
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-12">
 					<div class="abt-text">
 						<p class="top-sub">Since Year 1999</p>
 						<h2>We are <span class="orange-text">DentalCom</span></h2>
-						<p>Etiam vulputate ut augue vel sodales. In sollicitudin neque et massa porttitor vestibulum ac vel nisi. Vestibulum placerat eget dolor sit amet posuere. In ut dolor aliquet, aliquet sapien sed, interdum velit. Nam eu molestie lorem.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente facilis illo repellat veritatis minus, et labore minima mollitia qui ducimus.</p>
+						<p>With over 25 years of experience in dental care, DentalCom has been serving our community with exceptional oral health services. Our state-of-the-art facility combines advanced technology with compassionate care to ensure every patient receives the highest quality treatment.</p>
+						<p>Our team of experienced dentists and hygienists is dedicated to providing comprehensive dental solutions, from routine cleanings to complex procedures. We believe in preventive care and patient education to help you maintain optimal oral health throughout your life.</p>
 						<a href="about.html" class="boxed-btn mt-4">know more</a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<!-- end advertisement section -->
+	<!-- end About section -->
 	
 	<!-- shop banner -->
 	<section class="shop-banner">
     	<div class="container">
-        	<h3>December sale is on! <br> with big <span class="orange-text">Discount...</span></h3>
-            <div class="sale-percent"><span>Sale! <br> Upto</span>50% <span>off</span></div>
+        	<h3>New Year Special! <br> Get <span class="orange-text">Premium Dental Care...</span></h3>
+            <div class="sale-percent"><span>Special! <br> Up to</span>30% <span>off</span></div>
             <a href="{% url 'frontend:shop' %}" class="cart-btn btn-lg">Shop Now</a>
         </div>
     </section>
@@ -362,12 +362,12 @@
 							<div class="latest-news-bg news-bg-1 news-image"></div>
 						</a>
 						<div class="news-text-box">
-							<h3><a href="#" class="news-title-link">Blog Title</a></h3>
+							<h3><a href="#" class="news-title-link">Dental Health Tips</a></h3>
 							<p class="blog-meta">
-								<span class="author"><i class="fas fa-user"></i> <span class="author-name">Author</span></span>
-								<span class="date"><i class="fas fa-calendar"></i> <span class="news-date">Date</span></span>
+								<span class="author"><i class="fas fa-user"></i> <span class="author-name">Dr. Smith</span></span>
+								<span class="date"><i class="fas fa-calendar"></i> <span class="news-date">Dec 15, 2024</span></span>
 							</p>
-							<p class="excerpt news-description">Blog description...</p>
+							<p class="excerpt news-description">Essential tips for maintaining optimal oral health...</p>
 							<a href="#" class="read-more-btn news-read-more">read more <i class="fas fa-angle-right"></i></a>
 						</div>
 					</div>
@@ -434,6 +434,12 @@
 	<script src="{% static 'js/sticker.js' %}"></script>
 	<!-- main js -->
 	<script src="{% static 'js/main.js' %}"></script>
+	<!-- Django config -->
+	<script>
+		window.DJANGO_CONFIG = {
+			BASE_URL: '{{ API_BASE_URL }}'
+		};
+	</script>
 	<!-- news js -->
 	<script src="{% static 'js/news.js' %}"></script>
 	<!-- index js -->
