added apis to cart page

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -434,6 +434,8 @@
 	<script src="{% static 'js/sticker.js' %}"></script>
 	<!-- main js -->
 	<script src="{% static 'js/main.js' %}"></script>
+	<!-- navbar js -->
+	<script src="{% static 'js/navbar.js' %}"></script>
 	<!-- Django config -->
 	<script>
 		window.DJANGO_CONFIG = {
