--- a/Frontend/shop.html
+++ b/Frontend/shop.html
@@ -248,6 +248,8 @@
 	<script src="{% static 'js/sticker.js' %}"></script>
 	<!-- main js -->
 	<script src="{% static 'js/main.js' %}"></script>
+	<!-- navbar js -->
+	<script src="{% static 'js/navbar.js' %}"></script>
 	
 	<!-- Product data and shop functionality -->
 	{{ products|json_script:"products-data" }}
