--- a/Frontend/cart.html
+++ b/Frontend/cart.html
@@ -80,30 +80,7 @@
 								</tr>
 							</thead>
 							<tbody>
-								<tr class="table-body-row">
-									<td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
-									<td class="product-image"><img src="{% static 'img/products/product-img-1.jpg' %}" alt=""></td>
-									<td class="product-name">Strawberry</td>
-									<td class="product-price">Rs 85</td>
-									<td class="product-quantity"><input type="number" placeholder="0"></td>
-									<td class="product-total">1</td>
-								</tr>
-								<tr class="table-body-row">
-									<td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
-									<td class="product-image"><img src="{% static 'img/products/product-img-2.jpg' %}" alt=""></td>
-									<td class="product-name">Berry</td>
-									<td class="product-price">Rs 70</td>
-									<td class="product-quantity"><input type="number" placeholder="0"></td>
-									<td class="product-total">1</td>
-								</tr>
-								<tr class="table-body-row">
-									<td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
-									<td class="product-image"><img src="{% static 'img/products/product-img-3.jpg' %}" alt=""></td>
-									<td class="product-name">Lemon</td>
-									<td class="product-price">Rs 35</td>
-									<td class="product-quantity"><input type="number" placeholder="0"></td>
-									<td class="product-total">1</td>
-								</tr>
+								<!-- Cart items will be dynamically loaded here -->
 							</tbody>
 						</table>
 					</div>
@@ -121,7 +98,7 @@
 							<tbody>
 								<tr class="total-data">
 									<td><strong>Subtotal: </strong></td>
-									<td>Rs 500</td>
+									<td>Rs 0</td>
 								</tr>
 								<tr class="total-data">
 									<td><strong>Shipping: </strong></td>
@@ -129,13 +106,13 @@
 								</tr>
 								<tr class="total-data">
 									<td><strong>Total: </strong></td>
-									<td>Rs 545</td>
+									<td>Rs 45</td>
 								</tr>
 							</tbody>
 						</table>
 						<div class="cart-buttons">
-							<a href="cart.html" class="boxed-btn">Update Cart</a>
-							<a href="checkout.html" class="boxed-btn black">Check Out</a>
+							<!-- <button type="button" class="boxed-btn" onclick="cartManager.init()">Update Cart</button> -->
+							<a href="{% url 'frontend:checkout' %}" class="boxed-btn black">Check Out</a>
 						</div>
 					</div>
 
@@ -206,6 +183,10 @@
 	<script src="{% static 'js/sticker.js' %}"></script>
 	<!-- main js -->
 	<script src="{% static 'js/main.js' %}"></script>
+	<!-- navbar js -->
+	<script src="{% static 'js/navbar.js' %}"></script>
+	<!-- cart js -->
+	<script src="{% static 'js/cart.js' %}"></script>
 
 </body>
 </html>
